--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Unblocking Your Inner Light</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">32 minutes ago</div>
+                        <div class="date">47 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Mystical Serpent | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Hesitate... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Gold technical analysis in 5 minutes....</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1087,9 +1087,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=DWWD_cat5TE" target="_blank">
-                    <img src="https://i.ytimg.com/vi/DWWD_cat5TE/mqdefault.jpg" alt="Small Actions That Build Discipline">
+                    <img src="https://i.ytimg.com/vi/DWWD_cat5TE/mqdefault.jpg" alt="From Lazy to Disciplined – 6 Japanese Tiny Habits That Changed My Life">
                     <div class="video-info">
-                        <h3>Small Actions That Build Discipline</h3>
+                        <h3>From Lazy to Disciplined – 6 Japanese Tiny Habits That Changed My Life</h3>
                         <div class="channel">Samurai Matcha</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Gold technical analysis in 5 minutes....</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Unblocking Your Inner Light</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">32 minutes ago</div>
+                            <div class="date">47 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>The Mystical Serpent | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Hesitate... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8912,9 +8912,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=DWWD_cat5TE" target="_blank">
-                        <img src="https://i.ytimg.com/vi/DWWD_cat5TE/mqdefault.jpg" alt="Small Actions That Build Discipline">
+                        <img src="https://i.ytimg.com/vi/DWWD_cat5TE/mqdefault.jpg" alt="From Lazy to Disciplined – 6 Japanese Tiny Habits That Changed My Life">
                         <div class="video-info">
-                            <h3>Small Actions That Build Discipline</h3>
+                            <h3>From Lazy to Disciplined – 6 Japanese Tiny Habits That Changed My Life</h3>
                             <div class="channel">Samurai Matcha</div>
                             <div class="date">1 week ago</div>
                         </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
